Testing issue with chat-window height on smaller screens

--- a/public/chat.css
+++ b/public/chat.css
@@ -22,7 +22,7 @@
   position: relative;
   background: darkslategray;
   width: 40px;
-  height: 85%;
+  height: 83%;
   float: left;
   border-right: 5px solid #fff;
   transition: width 0.8s ease 0.3s;
@@ -54,7 +54,7 @@
   align-items: center;
   margin-top: 68px;
   opacity: 0;
-  height: 100%;
+  height: 70%;
   overflow-x: auto;
   padding-left: 13px;
 }
@@ -125,9 +125,14 @@ header h1 {
 
 .chat-window {
   overflow: auto;
-  height: 70%;
+  height: 75vh;
   background: rgba(20, 20, 20, 0.95);
-  padding-bottom: 150px;
+  /* padding-bottom: 150px; */
+}
+
+.custom-file-field-text-container {
+  /* background: black; */
+height: 2rem;
 }
 
 .container {
@@ -177,8 +182,8 @@ header h1 {
 }
 
 .image {
-  width: 22vmin;
-  height: 23vmin;
+  width: 150px;
+  height: 150px;
 }
 
 .imgage_strong_tag {
@@ -210,7 +215,6 @@ time {
   opacity: 0.2;
   padding: 10px 0px 0px 20px;
   font-size: 0.9rem;
-  font-weight: lighter;
   width: fit-content;
 }
 
